# YuvToJpegEncoder

./: CMakeLists.txt
include/: JPEGEncoder.h
src/: JPEGEncoder.cpp  Source.cpp
